# kazdov

./: .gitignore  CITATION.cff  LICENSE  LICENSE-PAPERS  README.md  pyproject.toml
.github/workflows/: build-papers.yml
configs/: alpha.yaml
docs/: architecture.md  install.md
examples/: generate_demo.py
experiments/paper1_algebra/: README.md  run_modarith_power.py
experiments/paper2_lm/: README.md  benchmark.py  eval_heldout.py  prep_data.py  test_kazdov.py  train_alpha.py
kazdov/: __init__.py  kazdov_lm.py  schedulers.py
papers/: 01-mobe-bcn.md  01-mobe-bcn.tex  02-kazdov-lm.md  02-kazdov-lm.tex  paper-style.css  references.bib
papers/figures/: make_routing_evolution.py
results/: diagnostics.json  final_eval.json  metrics_snapshot.jsonl  plot_training.py
results/routing_diag_1B/: diagnostics.json
results/routing_diag_4B/: diagnostics.json
results/routing_diag_final/: diagnostics.json
